@@ -1,0 +1,8 @@
+0
+1
+3
+4
+4
+5
+7
+8
